--- a/Bilinguals/Views/Dialogs/Delete.cshtml
+++ b/Bilinguals/Views/Dialogs/Delete.cshtml
@@ -5,45 +5,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2 class="text-center text-danger">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-center">Are you sure you want to delete this dialog?</h3>
 <div>
-    <h4>Dialog</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
-
-    </dl>
-
+    <h5 class="text-center">
+        @Html.DisplayFor(model => model.Name)
+    </h5>
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-actions no-color text-center mt-4">
+            <input type="submit" value="Delete" class="btn btn-danger rounded-pill2 me-2" />
+            <span class="btn btn-secondary rounded-pill2">@Html.ActionLink("Cancel", "Index", "", htmlAttributes: new { @class = "", style = "color:inherit;text-decoration: none;" })</span> 
         </div>
     }
 </div>
