--- a/Bilinguals/Views/Dialogs/Details.cshtml
+++ b/Bilinguals/Views/Dialogs/Details.cshtml
@@ -16,7 +16,6 @@
 <span class="d-flex justify-content-center">
     @if (User.IsInRole("Administrator"))
     {
-        <a href="~/Sentences/Create" class="btn btn-secondary btn-sm me-2" title="Create name dialog"><span class="bi bi-plus-lg me-1"></span> Add sentence</a>
         <a href="~/Dialogs/Edit/@Model.Id" class="btn btn-warning btn-sm me-2" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a>
         <a href="~/Dialogs/Delete/@Model.Id" class="btn btn-danger btn-sm" title="Delete dialog"><span class="bi bi-trash"></span></a>
     }
@@ -57,8 +56,8 @@
                     <td class="col-3 d-flex flex-column">
                         @if (User.IsInRole("Administrator"))
                         {
-                            <span class="mt-3 mb-2"><a href="~/Sentences/Edit/@item.Id" class="btn btn-warning rounded-pill btn-sm" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
-                            <span class=""><a href="~/Sentences/Delete/@item.Id" class="btn btn-danger btn-sm rounded-pill" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
+                            <span class="mt-3 mb-2"><a href="~/Sentences/Edit/@item.Id" class="btn btn-outline-info rounded-pill btn-sm pt-2 px-3" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
+                            <span class=""><a href="~/Sentences/Delete/@item.Id" class="btn btn-outline-danger btn-sm rounded-pill pt-2 px-3" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
                         }
                     </td>
                 </tr>
@@ -70,8 +69,8 @@
                     <td class="col-3 d-flex flex-column">
                         @if (User.IsInRole("Administrator"))
                         {
-                            <span class="mt-3 mb-2 d-flex flex-row-reverse"><a href="~/Sentences/Edit/@item.Id" class="btn btn-warning rounded-pill btn-sm" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
-                            <span class="d-flex flex-row-reverse"><a href="~/Sentences/Delete/@item.Id" class="btn btn-danger btn-sm rounded-pill" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
+                            <span class="mt-3 mb-2 d-flex flex-row-reverse"><a href="~/Sentences/Edit/@item.Id" class="btn btn-outline-info rounded-pill btn-sm pt-2 px-3" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
+                            <span class="d-flex flex-row-reverse"><a href="~/Sentences/Delete/@item.Id" class="btn btn-outline-danger btn-sm rounded-pill pt-2 px-3" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
                         }
                     </td>
                     <td class="col-9 d-flex align-items-end flex-column bg-white mb-3 rounded-pill px-4 py-2 shadow-sm">
@@ -128,8 +127,8 @@
                     <input id="dialogid" type="hidden" name="DialogId" value="@Model.Id" />
                     <input type="hidden" name="UserId" />
                     <input type="hidden" name="TimeStamp" />
-                    <input placeholder="Enter comment or feedback" class="form-control flex-fill me-3" type="text" name="Text" style=" max-width: 850px;" autocomplete="off" />
-                    <button type="submit" id="btn-post" class="btn btn-custom1 mt-4 flex-fill">Post</button>
+                    <input placeholder="Enter comment or feedback" class="form-control flex-fill me-3 rounded-pill2" type="text" name="Text" style=" max-width: 850px;" autocomplete="off" />
+                    <button type="submit" id="btn-post" class="btn btn-custom1 mt-4 flex-fill rounded-pill2">Post</button>
                 </form>
             </div>
         </div>
