--- a/Bilinguals/Views/Dialogs/Edit.cshtml
+++ b/Bilinguals/Views/Dialogs/Edit.cshtml
@@ -5,39 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2 class="text-center">Edit Dialog Name</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Dialog</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.DateCreated)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+        
+            <div class="d-flex justify-content-center">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control rounded-pill1", style = "max-width: 700px !important;" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
-        </div>
+        
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+    </div>
+    <div class="form-actions no-color text-center mt-4">
+        <input type="submit" value="Save" class="btn btn-custom1 rounded-pill2 me-2" />
+        <span class="btn btn-secondary rounded-pill2">@Html.ActionLink("Cancel", "Index", "", htmlAttributes: new { @class = "", style = "color:inherit;text-decoration: none;" })</span>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
