--- a/Bilinguals/Views/Sentences/Create.cshtml
+++ b/Bilinguals/Views/Sentences/Create.cshtml
@@ -5,29 +5,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Sentence</h4>
-        <hr />
+        <h2 class="text-center">Create sentence</h2>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.EnText, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EnText, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.EnText, new { htmlAttributes = new { @class = "form-control", placeholder = "English Text" } })
                 @Html.ValidationMessageFor(model => model.EnText, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ViText, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ViText, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ViText, new { htmlAttributes = new { @class = "form-control", placeholder = "Vietnamese Text" } })
                 @Html.ValidationMessageFor(model => model.ViText, "", new { @class = "text-danger" })
             </div>
         </div>
