--- a/Bilinguals/Views/Sentences/Delete.cshtml
+++ b/Bilinguals/Views/Sentences/Delete.cshtml
@@ -5,69 +5,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-center text-danger">Are you sure you want to delete this sentence?</h3>
 <div>
-    <h4>Sentence</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Dialog.Name)
+        <dt class="text-center">
+            Dialog Name
         </dt>
 
-        <dd>
+        <dd class="text-center">
             @Html.DisplayFor(model => model.Dialog.Name)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EnText)
+        <dt class="text-center mt-4">
+            English Text
         </dt>
 
-        <dd>
+        <dd class="text-center">
             @Html.DisplayFor(model => model.EnText)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ViText)
+        <dt class="text-center mt-4">
+            Vietnameme Text
         </dt>
 
-        <dd>
+        <dd class="text-center">
             @Html.DisplayFor(model => model.ViText)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SortOrder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SortOrder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-actions no-color text-center mt-4">
+            <input type="submit" value="Delete" class="btn btn-danger rounded-pill2 me-2" />
+            <span class="btn btn-secondary rounded-pill2">@Html.ActionLink("Cancel", "Index", "", htmlAttributes: new { @class = "", style = "color:inherit;text-decoration: none;" })</span> 
         </div>
     }
 </div>
