--- a/Bilinguals/Areas/Admin/Views/Roles/Delete.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Roles/Delete.cshtml
@@ -4,31 +4,19 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div class="container bg-light">
-    <h2>Delete</h2>
+<div class="container bg-white shadow-sm rounded-pill2">
+    <h3 class="text-center pt-4">Delete</h3>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h4 class="text-center">Are you sure you want to delete this role : <em style="color:red">@Html.DisplayFor(model => model.Name)</em> ?</h4>
     <div>
-        <h4>ApplicationRole</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Name)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
-
-        </dl>
-
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+            <div class="form-group pt-3 pb-4">
+                <div class="col-md-offset-2 col-md-auto text-center">
+                    <input type="submit" value="Delete" class="btn btn-sm btn-danger" />
+                    @Html.ActionLink("Back to List", "Index", "", new { @class = "btn-sm btn btn-secondary", style = "text-decoration: none;" })
+                </div>
             </div>
         }
     </div>
