--- a/Bilinguals/Areas/Admin/Views/Roles/Edit.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Roles/Edit.cshtml
@@ -4,36 +4,31 @@
     ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div class="container bg-light">
-    <h2>Edit</h2>
+<div class="container bg-white shadow-sm rounded-pill2">
+    <h4 class="text-center pt-4">Edit Role</h4>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ApplicationRole</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group text-center">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2 text-center" })
+                <div class="row justify-content-center">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", style = "max-width: 300px;" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group pt-3 pb-4">
+                <div class="col-md-offset-2 col-md-auto text-center">
+                    <input type="submit" value="Save" class="btn btn-sm btn-warning" />
+                    @Html.ActionLink("Back to List", "Index", "", new { @class = "btn-sm btn btn-secondary", style = "text-decoration: none;" })
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 </div>
