--- a/Bilinguals/Areas/Admin/Views/Roles/Index.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Roles/Index.cshtml
@@ -4,30 +4,43 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div class="container bg-light">
-    <h2>Index</h2>
-
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
+<div class="container bg-white shadow-sm rounded-pill2 pb-4">
+    <h4 class="text-center pt-4">Roles Management</h4>
+    <div class="row justify-content-center mt-2 mb-4">
+        <a href="/Admin/Roles/Create" class="btn btn-outline-custom1 text-center col-md-auto"><i class="bi bi-file-plus me-2"></i>Add role</a>
+    </div>
+    
+    <table class="table table-bordered d-flex justify-content-center" style="min-width: 300px;">
+        <tr class="text-center bg-custom3">
+            <th style="padding-left: 150px;padding-right:150px">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th></th>
+            <th style="padding-left: 100px;padding-right:100px">Options</th>
         </tr>
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="text-center">
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
+                    <span class="badge rounded-pill bg-custom1">@Html.DisplayFor(modelItem => item.Name)</span>
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    <div class="md-btn-group d-none d-md-block">
+                        <a href="/Admin/Roles/Edit/@item.Id" class="btn btn-warning btn-sm"><span class="bi bi-pencil-square"></span></a>
+                        <a href="/Admin/Roles/Delete/@item.Id" class="btn btn-danger btn-sm"><span class="bi bi-trash"></span></a>
+                    </div>
+                    <div class="btn-group d-md-none">
+                        <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" style="border: 1px solid #ddd"></button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="/Admin/Roles/Edit/@item.Id" class="btn btn-warning btn-sm w-100"><span class="bi bi-pencil-square"></span> edit</a>
+                            </li>
+                            <li role="separator" class="divider"></li>
+                            <li>
+                                <a href="/Admin/Roles/Delete/@item.Id" class="btn btn-danger btn-sm w-100"><span class="bi bi-trash"></span> delete</a>
+                            </li>
+                        </ul>
+                    </div>
                 </td>
             </tr>
         }
