--- a/Bilinguals/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -22,7 +22,7 @@
     <!-- Navigation-->
     <div class="p-3 bg-custom3" style="width: 250px;min-height: 700px;">
         <style>
-            .link-dark:hover, .link-dark:focus {
+            .sl:hover, .sl:focus {
                 background-color: #092139;
                 color: white;
             }
@@ -34,7 +34,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li>
-                <a href="~/admin/dashboard" class="nav-link link-dark mb-2">
+                <a href="~/admin/dashboard" class="nav-link link-dark mb-2 sl">
                     <i style="font-size: 20px;" class="bi bi-speedometer2 me-2"></i>
                     Dashboard
                 </a>
@@ -54,13 +54,13 @@
         </ul>
         <ul class="nav nav-pills flex-column mb-auto">
             <li>
-                <a href="~/admin/usermanager" class="nav-link link-dark mb-2">
+                <a href="~/admin/usermanager" class="nav-link link-dark sl mb-2">
                     <i style="font-size: 20px;" class="bi bi-person-lines-fill me-2"></i>
                     Accounts
                 </a>
             </li>
             <li>
-                <a href="~/admin/roles" class="nav-link link-dark">
+                <a href="~/admin/roles" class="nav-link link-dark sl">
                     <i style="font-size: 20px;" class="bi bi-sliders me-2"></i>
                     Roles
                 </a>
