--- a/Bilinguals/Areas/Admin/Views/UserManager/ChangePassword.cshtml
+++ b/Bilinguals/Areas/Admin/Views/UserManager/ChangePassword.cshtml
@@ -5,15 +5,14 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="container bg-light">
-    <h2>@ViewBag.Title</h2>
+<div class="container bg-white rounded-pill2 shadow-sm">
+    <h4 class="pt-4 pb-2 text-center">@ViewBag.Title</h4>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
             @Html.HiddenFor(model => model.LastName)
@@ -23,29 +22,28 @@
             @Html.HiddenFor(model => model.DateOfBirth)
             @Html.HiddenFor(model => model.PhoneNumber)
 
-            <div class="form-group">
-                @Model.FullName
+            <div class="form-group text-center mb-2">
+                Account : @Model.FullName
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Password, "Nhap mat khau moi", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.LabelFor(model => model.Password, "Nhap mat khau moi", htmlAttributes: new { @class = "control-label col-md-2" })*@
+                <div class="row justify-content-center text-center">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control col-md-auto", placeholder = "Enter new password", style = "max-width: 300px;" } })
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Change" class="btn btn-default" />
+            <div class="form-group pt-3 pb-5">
+                <div class="col-md-offset-2 col-md-auto text-center">
+                    <input type="submit" value="Change" class="btn btn-sm btn-custom1 me-2" />
+                    @Html.ActionLink("Back to List", "Index", "", new { @class = "btn-sm btn btn-secondary", style = "text-decoration: none;" })
                 </div>
             </div>
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+    
 </div>
 
 
