--- a/Bilinguals/Areas/Admin/Views/UserManager/Delete.cshtml
+++ b/Bilinguals/Areas/Admin/Views/UserManager/Delete.cshtml
@@ -4,71 +4,18 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div class="container bg-light">
-    <h2>Delete</h2>
+<div class="container bg-white rounded-pill2 shadow-sm">
+    <h2 class="text-center pt-3">Delete</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>ApplicationUser</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.FirstName)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.LastName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.LastName)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.DateOfBirth)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.PhoneNumber)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.UserName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.UserName)
-            </dd>
-
-        </dl>
-
+    <h3 class="text-center">Are you sure you want to delete this account : <em style="color: red"> @Html.DisplayFor(model => model.FullName)</em> ?</h3>
+    <div class="pb-3">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+            <div class="form-actions no-color text-center">
+                <input type="submit" value="Delete" class="btn btn-custom1 btn-sm me-2" /> 
+                @Html.ActionLink("Back to List", "Index", "", new { @class = "btn-sm btn btn-secondary", style = "text-decoration: none;" })
             </div>
         }
     </div>
