--- a/Bilinguals/Areas/Admin/Views/UserManager/Details.cshtml
+++ b/Bilinguals/Areas/Admin/Views/UserManager/Details.cshtml
@@ -5,66 +5,35 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="container bg-light">
-    <h2>Details</h2>
-
+<div class="container bg-white rounded-pill2 shadow-sm">
     <div>
-        <h4>ApplicationUser</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.FirstName)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.LastName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.LastName)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.DateOfBirth)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.PhoneNumber)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.UserName)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.UserName)
-            </dd>
-
-        </dl>
+        <h4 class="text-center pt-5 pb-2">Details Account</h4>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">@Html.DisplayNameFor(model => model.FirstName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.LastName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.DateOfBirth)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.Email)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.PhoneNumber)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.UserName)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>@Html.DisplayFor(model => model.FirstName)</td>
+                    <td>@Html.DisplayFor(model => model.LastName)</td>
+                    <td>@Html.DisplayFor(model => model.DateOfBirth)</td>
+                    <td>@Html.DisplayFor(model => model.Email)</td>
+                    <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
+                    <td>@Html.DisplayFor(model => model.UserName)</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
+    <p class="pb-5 text-center">
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn-sm btn btn-warning me-2", style = "text-decoration: none;" }) 
+        @Html.ActionLink("Back to List", "Index", "", new { @class = "btn-sm btn btn-secondary", style = "text-decoration: none;" })
     </p>
 </div>
 
