--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNet.Identity
 
 @{
-    ViewBag.Title = "Trang chủ";
+    ViewBag.Title = "Home";
     var searchText = Request.QueryString["SearchText"];
     Layout = "~/Views/Shared/_Layout.cshtml";
     PagedList.IPagedList<Bilinguals.Domain.Models.Dialog> dialogs = ViewBag.dialogs;
@@ -11,12 +11,15 @@
 <link href="~/Content/css/home-index.css" rel="stylesheet" />
 
 <div class="row gx-5 align-items-center">
-    <div class="aftersearch text-center">
-        <img src="~/Avatars/home.png" style="width: 274px" alt="">
-    </div>
-    <div class="aftersearch text-center">
-        <span style="font-family: 'Ephesis', cursive; font-size: 3em; ">" Adventure is the best way to learn. "</span>
-    </div>
+    @if (Model.Count == 0 || dialogs?.Count == 0)
+    {
+        <div class="aftersearch text-center">
+            <img src="~/Avatars/home.png" style="width: 274px" alt="">
+        </div>
+        <div class="aftersearch text-center">
+            <span style="font-family: 'Ephesis', cursive; font-size: 3em; ">" Adventure is the best way to learn. "</span>
+        </div>
+    }
     <form>
         <div class="row mb-3 justify-content-center">
             <input autocomplete="off" style="width:30rem" type="text" class="form-control text-center rounded-pill" id="searchText" name="searchText" value="@searchText" placeholder="Enter the sentence or vocabulary">
@@ -64,8 +67,7 @@
                                     </span>
                                     <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i><span class="vietext"></span></span>
                                     <span class="timeupdated">&emsp;&emsp;&ensp;&nbsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
-                                    @*<span class="dialogname">&emsp;&emsp;<i class="bi bi-card-list me-2"></i>@item.DialogName</span>*@
-                                    <span></span>
+                                    <a @(User.Identity.GetUserId() == null ? "hidden" : "") href="/dialogs/details/@item.DialogId" style="text-decoration: none;" class="dialogname py-2">&emsp;&emsp;<i class="bi bi-card-list me-2"></i>@item.DialogName</a>
                                 </td>
                                 <td class="col-3 d-flex flex-row-reverse">
                                     <div class="btn-group dropstart btnsave">
@@ -107,7 +109,6 @@
                                         <span class="timeupdated">&emsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
                                     </td>
                                     <td class="col-4">
-                                        @item.DateModified
                                     </td>
                                 </tr>
                             }
